--- a/html/dashboard/history.html
+++ b/html/dashboard/history.html
@@ -1,114 +1,200 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>View History</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="../../images/favicon/favicon.ico">
-    <link rel="stylesheet" href="../../styles/global/navbar.css">
-    <link rel="stylesheet" href="../../styles/global/footer.css">
-    <link rel="stylesheet" href="../../styles/global/body.css">
-    <link rel="stylesheet" href="../../styles/dashboard/style.css">
-    <link rel="stylesheet" href="../../styles/dashboard/history.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <title>View History</title>
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <link
+            data-vue-tag="ssr"
+            rel="icon"
+            type="image/png"
+            sizes="96x96"
+            href="../../images/favicon/favicon.ico"
+        />
+        <link rel="stylesheet" href="../../styles/global/navbar.css" />
+        <link rel="stylesheet" href="../../styles/global/footer.css" />
+        <link rel="stylesheet" href="../../styles/global/body.css" />
+        <link rel="stylesheet" href="../../styles/dashboard/style.css" />
+        <link rel="stylesheet" href="../../styles/dashboard/history.css" />
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://www.w3schools.com/w3css/4/w3.css"
+        />
+    </head>
 
-<body>
-    <div class="menu-toggle">
-        <button title="menu" onclick="toggleNav()" class="toggle-btn">
-            <i class="fa fa-bars"></i>
-        </button>
-    </div>
-    <aside id="sidebar">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="space-out">
-                    <div class="flexNav">
-                        <a class="nav-logo" href="../dashboard/patient-dashboard.html" title="Home">
-                            <div class="header-logo"></div>
-                        </a>
-                        <ul class="nav navbar-nav">
-                            <li><a href="../dashboard/patient-dashboard.html"><i class="fa fa-home"></i> Home</a></li>
-                            <li><a href="../dashboard/egfr-options.html"><i class="fa fa-calculator"></i> eGFR Calculator</a></li>
-                            <li><a href="about.html"><i class="fa fa-info-circle"></i> About</a></li>
-                            <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
-                        </ul>
+    <body>
+        <div class="menu-toggle">
+            <button title="menu" onclick="toggleNav()" class="toggle-btn">
+                <i class="fa fa-bars"></i>
+            </button>
+        </div>
+        <aside id="sidebar">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="space-out">
+                        <div class="flexNav">
+                            <a
+                                class="nav-logo"
+                                href="../dashboard/patient-dashboard.html"
+                                title="Home"
+                            >
+                                <div class="header-logo"></div>
+                            </a>
+                            <ul class="nav navbar-nav">
+                                <li>
+                                    <a
+                                        href="../dashboard/patient-dashboard.html"
+                                        ><i class="fa fa-home"></i> Home</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="../dashboard/egfr-options.html"
+                                        ><i class="fa fa-calculator"></i> eGFR
+                                        Calculator</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="about.html"
+                                        ><i class="fa fa-info-circle"></i>
+                                        About</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="contact.html"
+                                        ><i class="fa fa-envelope"></i>
+                                        Contact</a
+                                    >
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <a class="logout" href="logout.html"
+                                ><i class="fa fa-sign-out"></i> Logout</a
+                            >
+                            <!-- Google Translate widget -->
+                            <div
+                                id="google_translate_element"
+                                class="translate-element"
+                            ></div>
+                        </div>
                     </div>
-                    <div>
-                        <a class="logout" href="logout.html"><i class="fa fa-sign-out"></i> Logout</a>
-                        <!-- Google Translate widget -->
-                        <div id="google_translate_element" class="translate-element"></div>
+                </div>
+            </nav>
+        </aside>
+
+        <main class="history-main dashboard-main">
+            <div class="history-header">
+                <h1>eGFR Calculation History</h1>
+                <p>View your previous eGFR calculation results</p>
+            </div>
+
+            <div class="history-container">
+                <div id="history-list" class="history-list">
+                    <!-- History items will be populated by JavaScript -->
+                </div>
+            </div>
+        </main>
+
+        <!-- History Detail Modal -->
+        <div
+            class="modal fade"
+            id="historyModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="historyModalLabel"
+        >
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button
+                            type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            aria-label="Close"
+                        >
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="historyModalLabel">
+                            Calculation Details
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="result-section">
+                            <h2>Final Result</h2>
+                            <div class="result-value" id="modal-result">
+                                <!-- Result will be populated by JavaScript -->
+                            </div>
+                            <div class="result-date">
+                                <p id="modal-date">
+                                    <span></span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="answers-section">
+                            <h3>Your Answers</h3>
+                            <br />
+                            <div id="modal-answers">
+                                <!-- Answers will be populated by JavaScript -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button
+                            type="button"
+                            class="btn btn-default"
+                            data-dismiss="modal"
+                        >
+                            Close
+                        </button>
                     </div>
                 </div>
             </div>
-        </nav>
-    </aside>
-
-    <main class="history-main dashboard-main">
-        <div class="history-header">
-            <h1>eGFR Calculation History</h1>
-            <p>View your previous eGFR calculation results</p>
         </div>
 
-        <div class="history-container">
-            <div id="history-list" class="history-list">
-                <!-- History items will be populated by JavaScript -->
-            </div>
-        </div>
-    </main>
+        <script
+            type="module"
+            src="../../js/dashboard/history.js"
+            type="text/javascript"
+        ></script>
+        <!-- <script src="../../js/dashboard/guardScript.js" type="text/javascript"></script> -->
+        <script
+            src="../../js/dashboard/navScript.js"
+            type="text/javascript"
+        ></script>
+        <script
+            type="module"
+            src="../../js/services/user/userInfo.js"
+            type="text/javascript"
+        ></script>
+        <script
+            src="../../js/account/logout.js"
+            type="text/javascript"
+        ></script>
 
-    <!-- History Detail Modal -->
-    <div class="modal fade" id="historyModal" tabindex="-1" role="dialog" aria-labelledby="historyModalLabel">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="historyModalLabel">Calculation Details</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="result-section">
-                        <h2>Final Result</h2>
-                        <div class="result-value" id="modal-result">
-                            <!-- Result will be populated by JavaScript -->
-                        </div>
-                        <div class="result-date">
-                            <p id="modal-date">
-                                <span></span>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="answers-section">
-                        <h3>Your Answers</h3>
-                        <br>
-                        <div id="modal-answers">
-                            <!-- Answers will be populated by JavaScript -->
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="../../js/dashboard/history.js" type="text/javascript"></script>
-    <!-- <script src="../../js/dashboard/guardScript.js" type="text/javascript"></script> -->
-    <script src="../../js/dashboard/navScript.js" type="text/javascript"></script>
-    <script src="../../js/services/user/userInfo.js" type="text/javascript"></script>
-    <script src="../../js/account/logout.js" type="text/javascript"></script>
-
-    <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-        }
-    </script>
-    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-</body>
+        <script type="text/javascript">
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement(
+                    { pageLanguage: "en" },
+                    "google_translate_element",
+                );
+            }
+        </script>
+        <script
+            type="text/javascript"
+            src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+        ></script>
+    </body>
 </html>
